<resources>
    <string name="app_name">Assignment 8</string>
    <string name="action_settings">Settings</string>
    <string name="stock_manager">Stock Manager</string>
    <string name="product_name">Product Name:</string>
    <string name="Brand">Brand:</string>

    <string name="price">Price:</string>
    <string name="color">Color:</string>
    <string name="stock">Stock:</string>
    <string name="save">Save</string>
    <string name="add">+</string>

    <string name="buy">Buy Stock</string>
    <string name="sell">Sell Stock</string>
    <string name="sell_all">Sell All</string>
    <string name="delete_from_record">Delete Item From Record</string>
    <string name="add_stock_label">Add A Stock</string>'
    <string name="manage_stock_label">Manage Stock</string>

    <drawable name="apple_logo">@drawable/apple</drawable>
    <drawable name="logo">@drawable/logo</drawable>
    <drawable name="microsoft_logo">@drawable/microsoft</drawable>
    <drawable name="samsung_logo">@drawable/samsung</drawable>
</resources>
