<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="0.04"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/product_name"
            android:id="@+id/textView4"
            android:layout_weight=".5"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginLeft="@dimen/minimum_space_between_widgets"
            android:layout_marginRight="@dimen/minimum_space_between_widgets" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="New Text"
            android:id="@+id/textProductName"
            android:layout_weight=".5"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginLeft="@dimen/minimum_space_between_widgets"
            android:layout_marginRight="@dimen/minimum_space_between_widgets" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="0.04"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:weightSum="1" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/Brand"
            android:id="@+id/textView5"
            android:layout_weight=".5"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginLeft="@dimen/minimum_space_between_widgets"
            android:layout_marginRight="@dimen/minimum_space_between_widgets" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="New Text"
            android:id="@+id/textBrand"
            android:layout_weight=".5"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginLeft="@dimen/minimum_space_between_widgets"
            android:layout_marginRight="@dimen/minimum_space_between_widgets" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="0.04"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:weightSum="1" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/price"
            android:id="@+id/textView7"
            android:layout_weight=".5"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginLeft="@dimen/minimum_space_between_widgets"
            android:layout_marginRight="@dimen/minimum_space_between_widgets" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/price"
            android:id="@+id/textPrice"
            android:layout_weight=".5"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginLeft="@dimen/minimum_space_between_widgets"
            android:layout_marginRight="@dimen/minimum_space_between_widgets" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="0.04"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:weightSum="1" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/color"
            android:id="@+id/textView9"
            android:layout_weight=".5"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginLeft="@dimen/minimum_space_between_widgets"
            android:layout_marginRight="@dimen/minimum_space_between_widgets" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="New Text"
            android:id="@+id/textColor"
            android:layout_weight=".5"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginLeft="@dimen/minimum_space_between_widgets"
            android:layout_marginRight="@dimen/minimum_space_between_widgets" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="0.04"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        android:layout_marginBottom="@dimen/minimum_space_between_widgets">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/stock"
            android:id="@+id/textView11"
            android:layout_weight=".5"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginLeft="@dimen/minimum_space_between_widgets"
            android:layout_marginRight="@dimen/minimum_space_between_widgets" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="New Text"
            android:id="@+id/textStock"
            android:layout_weight=".5"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginLeft="@dimen/minimum_space_between_widgets"
            android:layout_marginRight="@dimen/minimum_space_between_widgets" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/minimum_space_between_widgets">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/buy"
            android:id="@+id/buttonBuyStock"
            android:layout_weight=".5"
            android:layout_marginRight="@dimen/minimum_space_between_widgets"
            android:textStyle="bold" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/sell"
            android:id="@+id/buttonSellStock"
            android:layout_weight=".5"
            android:layout_marginLeft="@dimen/minimum_space_between_widgets"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sell_all"
        android:id="@+id/buttonSellAll"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textStyle="bold" />

    <Button

        android:text="@string/delete_from_record"
        android:id="@+id/buttonDeleteFromRecord"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:background="@color/red"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />
</LinearLayout>
    </ScrollView>